--- a/views/resources/assistive_tech_vendors.handlebars
+++ b/views/resources/assistive_tech_vendors.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron-glossary">
+<div class="jumbotron-assist-tech">
     <span>
         
         <h1 class="main-h1"> ASSISTIVE TECHNOLOGIES </h1>
