--- a/views/resources/glossary.handlebars
+++ b/views/resources/glossary.handlebars
@@ -3,7 +3,7 @@
         
         <h1 class="main-h1"> GLOSSARY 
         <p class="what-is-sci"><strong></strong></p>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 400px; height: 60px; padding: 18px">CLICK TO LEARN MORE</a>
+            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 400px; height: 60px; padding: 18px">CLICK TO LEARN MORE</a> --}}
         </h1> 
         
         
@@ -12,7 +12,7 @@
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
   <ul class="shortcuts">
-  <li>jump to:</li>
+  <li>JUMP TO:</li>
   <li><a href="#A" title="Terms beginning with A">A</a></li>
   <li><a href="#B" title="Terms beginning with B">B</a></li>
   <li><a href="#C" title="Terms beginning with C">C</a></li>
