--- a/views/resources/story_cesar.handlebars
+++ b/views/resources/story_cesar.handlebars
@@ -3,7 +3,7 @@
         
         <h1 class="main-h1"> Cesar's Story 
         <p class="what-is-sci"><strong></strong></p>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="cesar-btn" style="width: 400px; height: 60px; padding: 18px">CLICK TO LEARN MORE</a>
+            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="cesar-btn" style="width: 400px; height: 60px; padding: 18px">CLICK TO LEARN MORE</a> --}}
         </h1> 
         
         
