--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -133,7 +133,7 @@ Stargardt disease, like other forms of macular degeneration, does not have a cur
 Note that excessive amounts of Vitamin A – which is usually considered a good nutrient for the eyes – can actually be toxic to the eyes in people with Stargardt disease because the vitamin is not metabolized by cells in the eye. Check with a health practitioner about nutrition.<br><br>
               </p><br><br>
               <p class="what-is-sci"><strong>Register to find a trial!</strong></p>
-                <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">GET STARTED!</a>
+                <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">GET STARTED</a>
           </section>
       </div>
     </div>
