--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -19,46 +19,46 @@
   <div class="form-group">
     <label for="visual trouble age">At what age did you start having visual trouble?
 </label>
-    <input type="number" name="visualtrouble" placeholder="" class="form-control" > 
+    <input type="number" name="visualtrouble" placeholder="" class="form-control" required="true"> 
   </div>
 
   <div class="form-group">
     <label for="besteyevision">Back then, what was the vision of your best seeing eye (20/xxx)?</label>
-    <input type="text" name="besteyevision" placeholder="" class="form-control" >
+    <input required="true" type="text" name="besteyevision" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
     <label for="Vision Today">What is your vision today (best seeing eye, 20/xxx)? </label>
-    <input type="number" id="visiontoday" name="visiontoday" class="form-control" placeholder="">
+    <input required="true" type="number" id="visiontoday" name="visiontoday" class="form-control" placeholder="">
   </div> 
 
   <div class="form-group">
     <label for="Genetically confirmed">Have you been genetically confirmed for Stargardt (Yes/No)?</label>
-    <input type="text" name="stargeneticallyconfirm" placeholder="" class="form-control" >
+    <input required="true" type="text" name="stargeneticallyconfirm" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
     <label for="mutation">If yes, please provide the detected ABCA4 genetic mutation(s)</label>
-    <input type="text" name="genemutation" placeholder="" class="form-control" >
+    <input required="true" type="text" name="genemutation" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
     <label for="opto name">Name of your ophthalmologist
 </label>
-    <input type="text" name="opthaname" placeholder="" class="form-control" >
+    <input required="true" type="text" name="opthaname" placeholder="" class="form-control" >
   </div>
   <div class="form-group">
     <label for="opto phone and email">Contact information of your ophthalmologist (phone, email or both</label>
-    <input type="text" name="opthaemail" placeholder="info@gmail.com 212-111-1111" class="form-control" >
+    <input required="true" type="text" name="opthaemail" placeholder="info@gmail.com 212-111-1111" class="form-control" >
   </div>
   <div class="form-group">
     <label for="Under 18 legal guardian">If you are under 18 years old, please enter the name of a parent or legal representative:</label>
-    <input type="text" name="underlegalguardian" placeholder="" class="form-control" >
+    <input required="true" type="text" name="underlegalguardian" placeholder="" class="form-control" >
   </div>
   <div class="form-group">
     <label for="Form filled out for someone else">If you filled out this form for someone else, please enter your name here
 </label>
-    <input type="text" name="filledoutform" placeholder="" class="form-control" >
+    <input required="true" type="text" name="filledoutform" placeholder="" class="form-control" >
   </div>
   <p>Cesarcells.com takes your personal information very seriously.<br> The information you provide will only be used by Cesarcells to provide updates on clinical studies, or send other helpful news on Stargardt disease trials and research.</p>
 
