--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -31,13 +31,22 @@
               </ul>
             </li>
             <li class="dropdown">
+              <a href="#" id="resources-nav-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="dLabel">
+                <li><a href="/contact_us/contact">Contact</a></li>
+                <li><a href="/about_us/mission">Our Mission</a></li>
+                <li><a href="/about_us/team">Our Team</a></li>
+                
+              </ul>
+            </li>
+            <li class="dropdown">
              <A href="/#how-it-work-main" id="howitworks-nav-text" class="navbar-link" role="button">How it works</A>
             </li>
             <li class="dropdown">
               <A href="/#tools-main" id="tools-nav-text" class="navbar-link" role="button">Tools</A>
             </li>
             <li class="dropdown">
-              <A href="/#treatments-main" id="treatments-nav-text" class="navbar-link" role="button">Treatments</A>
+              <A href="/#treatments-main" id="treatments-nav-text" class="navbar-link" role="button">Clinical Trials</A>
 
             </li>
             
