styled about page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,11 @@
     <span>
     
         <h1 class="main-h1"> A new approach <br>to finding clinical trials. 
-        <p class="what-is-sci"><strong></strong></p>
-            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a>
-        </h1>  --}}
+            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a> --}}
+        </h1> 
+        <h1 class="main-h1-2">  
+            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a> --}}
+        </h1> 
         
         
     </span>
@@ -91,34 +93,34 @@
 
                         <div class="col-sm-2">
                             
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-eye-open icon-test" aria-hidden="true"></span>        Amsler Test<br></h2>
+                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-eye-open icon-test" aria-hidden="true"></span><br>       Amsler Test<br></h2>
 
                         </div>
                         <div class="col-sm-2">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-book" aria-hidden="true"></span>        Glossary<br></h2>
+                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-book icon-book" aria-hidden="true"></span><br>        Glossary<br></h2>
                         
                         </div>
                         
 
                         <div class="col-sm-2">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-check" aria-hidden="true"></span>        Clinical Trial Qualifier</h2>
+                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-check icon-check" aria-hidden="true"></span><br>        Clinical Trial Qualifier</h2>
                         
                         </div> 
                         <div class="col-sm-2">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>   Discussion Forum</h2>
+                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-comment icon-comment" aria-hidden="true"></span><br>   Discussion Forum</h2>
                         
                         </div>
                         <div class="col-sm-2">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>        Text Reader<br> </h2>
+                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-bullhorn icon-bull" aria-hidden="true"></span><br>        Text Reader<br> </h2>
 
                         </div>
                         <div class="col-sm-2">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>        Appointments<br> </h2>
+                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-calendar icon-calendar" aria-hidden="true"></span><br>        Appointments<br> </h2>
 
                         </div>
 
@@ -159,7 +161,7 @@
                          </div><br><br><br>
                          
                          <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p>
-                           <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn">Register Now</a>
+                           <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
            
                 </header>
             </div>
