--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,8 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+{{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
+
 </head>
 
 
