--- a/views/resources/glossary.handlebars
+++ b/views/resources/glossary.handlebars
@@ -13,32 +13,32 @@
 <div class="row" style="margin-top: 150px; margin-left: 150px">
   <ul class="shortcuts">
   <li>JUMP TO:</li>
-  <li><a href="#A" title="Terms beginning with A">A</a></li>
-  <li><a href="#B" title="Terms beginning with B">B</a></li>
-  <li><a href="#C" title="Terms beginning with C">C</a></li>
-  <li><a href="#D" title="Terms beginning with D">D</a></li>
-  <li><a href="#E" title="Terms beginning with E">E</a></li>
-  <li><a href="#F" title="Terms beginning with F">F</a></li>
-  <li><a href="#G" title="Terms beginning with G">G</a></li>
-  <li><a href="#H" title="Terms beginning with H">H</a></li>
-  <li><a href="#I" title="Terms beginning with I">I</a></li>
-  <li><a href="#J" title="Terms beginning with J">J</a></li>
-  <li><a href="#K" title="Terms beginning with K">K</a></li>
-  <li><a href="#L" title="Terms beginning with L">L</a></li>
-  <li><a href="#M" title="Terms beginning with M">M</a></li>
-  <li><a href="#N" title="Terms beginning with N">N</a></li>
-  <li><a href="#O" title="Terms beginning with O">O</a></li>
-  <li><a href="#P" title="Terms beginning with P">P</a></li>
-  <li><a href="#Q" title="Terms beginning with Q">Q</a></li>
-  <li><a href="#R" title="Terms beginning with R">R</a></li>
-  <li><a href="#S" title="Terms beginning with S">S</a></li>
-  <li><a href="#T" title="Terms beginning with T">T</a></li>
-  <li><a href="#U" title="Terms beginning with U">U</a></li>
-  <li><a href="#V" title="Terms beginning with V">V</a></li>
-  <li><a href="#W" title="Terms beginning with W">W</a></li>
-  <li><a href="#X" title="Terms beginning with X">X</a></li>
-  <li><a href="#Y" title="Terms beginning with Y">Y</a></li>
-  <li><a href="#Z" title="Terms beginning with Z">Z</a></li>
+  <li><a class="glossary-a" href="#A" title="Terms beginning with A">A</a></li>
+  <li><a class="glossary-a" href="#B" title="Terms beginning with B">B</a></li>
+  <li><a class="glossary-a" href="#C" title="Terms beginning with C">C</a></li>
+  <li><a class="glossary-a" href="#D" title="Terms beginning with D">D</a></li>
+  <li><a class="glossary-a" href="#E" title="Terms beginning with E">E</a></li>
+  <li><a class="glossary-a" href="#F" title="Terms beginning with F">F</a></li>
+  <li><a class="glossary-a" href="#G" title="Terms beginning with G">G</a></li>
+  <li><a class="glossary-a" href="#H" title="Terms beginning with H">H</a></li>
+  <li><a class="glossary-a" href="#I" title="Terms beginning with I">I</a></li>
+  <li><a class="glossary-a" href="#J" title="Terms beginning with J">J</a></li>
+  <li><a class="glossary-a" href="#K" title="Terms beginning with K">K</a></li>
+  <li><a class="glossary-a" href="#L" title="Terms beginning with L">L</a></li>
+  <li><a class="glossary-a" href="#M" title="Terms beginning with M">M</a></li>
+  <li><a class="glossary-a" href="#N" title="Terms beginning with N">N</a></li>
+  <li><a class="glossary-a" href="#O" title="Terms beginning with O">O</a></li>
+  <li><a class="glossary-a" href="#P" title="Terms beginning with P">P</a></li>
+  <li><a class="glossary-a" href="#Q" title="Terms beginning with Q">Q</a></li>
+  <li><a class="glossary-a" href="#R" title="Terms beginning with R">R</a></li>
+  <li><a class="glossary-a" href="#S" title="Terms beginning with S">S</a></li>
+  <li><a class="glossary-a" href="#T" title="Terms beginning with T">T</a></li>
+  <li><a class="glossary-a" href="#U" title="Terms beginning with U">U</a></li>
+  <li><a class="glossary-a" href="#V" title="Terms beginning with V">V</a></li>
+  <li><a class="glossary-a" href="#W" title="Terms beginning with W">W</a></li>
+  <li><a class="glossary-a" href="#X" title="Terms beginning with X">X</a></li>
+  <li><a class="glossary-a" href="#Y" title="Terms beginning with Y">Y</a></li>
+  <li><a class="glossary-a" href="#Z" title="Terms beginning with Z">Z</a></li>
   </ul>
   <div class="col-md-12">
   <a name="A"></a>
