--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
     color: darkslategray 
 ;
     background-color: white;
-    padding: 5px;
+    /*padding: 5px;*/
     font-size: 23px;
     /*line-height: .6;*/
 }
@@ -330,6 +330,11 @@ pre {
     background-size: cover;
     height: 45%;
 }  
+.jumbotron-aboutus {
+    background-image: url('http://www.stemcentrx.com/img/hdr_company.jpg');
+    background-size: cover;
+    height: 60%;
+}
 #results-h1 {
     margin-top: 200px;
     text-align: center;
@@ -354,6 +359,18 @@ pre {
     text-transform: uppercase;
 }
 .main-h1 {
+    padding-top: 215px;
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 65px;
+    text-align: center;
+    line-height: 1.3;
+    color: white;
+    width: 100%;
+    font-weight: bold;
+    margin-top: 0;
+     
+}
+.main-h1-2 {
     padding-top: 155px;
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 65px;
@@ -362,6 +379,7 @@ pre {
     color: white;
     width: 100%;
     font-weight: bold;
+    margin-top: 0;
 }
 #main-row-sect {
     background-color: white;
@@ -544,6 +562,18 @@ text-align: center;
 }
 .icon-test {
     color: blue;
+    padding: 20px;
+}
+.icon-arrow {
+
+}
+.glossary-a {
+    font-size: 24px;
+}
+.glossary-a:hover {
+    color: deeppink;
+    font-size: 24px;
+
 }
 .tools-image {
     position: relative; 
@@ -554,7 +584,12 @@ text-align: center;
     /*margin-left: 50px;*/
     /*width: 100%;*/
 }
-
+#our-mission {
+    margin-top: 10%;
+    line-height: 1.3;
+    text-align: left;
+    margin-bottom: 10%;
+}
 .avail-trials-h2 {
     font-size: 32px;
 }
@@ -731,6 +766,36 @@ text-align: center;
     background-color:  whitesmoke;
     color: deeppink;
     border-color: transparent;
+}
+.about-p {
+    line-height: 1.5em;
+    margin: .8125em 0;
+    margin-bottom: 10%;
+}
+.modal-trigger {
+    text-decoration: none;
+    color: deeppink;
+    line-height: 1.5em;
+        display: block;
+        margin: 2em 0 0;
+}
+.modal-lg {
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+}
+.modal-body {
+    background-color: white;
+}
+#eye-diseases {
+    color: deeppink;
+}
+.modal-trigger:hover {
+    text-decoration: none;
+    color: deeppink;
+}
+.job-title {
+    color: darkslategray;
 }
 #learn-more:hover {
     background-color:  transparent;
@@ -989,10 +1054,7 @@ div.container-fluid.bg-info {
 }
 nav.navbar.navbar-default.navbar-fixed-top {
     background-color: white;
-    /*color: white;*/ 
-    height: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
+    
 }
 
 .panel-default {
@@ -1002,16 +1064,9 @@ nav.navbar.navbar-default.navbar-fixed-top {
 .details-new-form {
   margin-top: 30px;
   width: 500px;
-  /*background-color: green;*/
-  /*text-align: center;*/
+ 
 }
-/*body {
-  color: black;
-  background-color: #e8efef;
-  font-size: 20px;
-  line-height:1;
-  font:normal 0.9em/1em"Helvetica Neue", Helvetica, Arial, sans-serif;
-}*/
+
 #header-details-form {
   margin-top: 120px;
 }
@@ -1424,6 +1479,26 @@ li,ul{
 
 .icon-info {
     position: relative;
+}
+.icon-book {
+    color: red;
+    padding: 20px;
+}
+.icon-check {
+    color: mediumseagreen;
+    padding: 20px;
+}
+.icon-comment {
+    color: tomato;
+    padding: 20px;
+}
+.icon-bull {
+    color: khaki;
+    padding: 20px;
+}
+.icon-calendar {
+    color: burlywood;
+    padding: 20px;
 }
 .navi i {
     font-size: 18px;
