--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -1,5 +1,5 @@
 
-<form action="/contact_us/send" method="post" style="margin-top: 150px">
+<form action="/contact_us/send" method="post" style="margin-top: 150px; background-color: whitesmoke; padding: 100px">
 
     <h2 style="text-align: left">Contact Us:</h2>
     <label>Name: <input type="text" name="name" size="30" maxlength="100" placeholder="Your Name..."></label><br />
@@ -9,5 +9,5 @@
       <textarea rows="4" cols="40" id="comments" name="content" placeholder="Your Message..."></textarea>
     </p>
     <label><input type="checkbox" name="subscribe" checked="checked" /> Sign me up for email updates</label><br />
-    <input type="submit" value="Submit" />
+    <input type="submit" id="main-btn" value="Submit" />
 </form>
