--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -34,8 +34,7 @@
               <a href="#" id="resources-nav-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/contact_us/contact">Contact</a></li>
-                <li><a href="/about_us/mission">Our Mission</a></li>
-                <li><a href="/about_us/team">Our Team</a></li>
+                <li><a href="/about_us/aboutus">Company</a></li>
                 
               </ul>
             </li>
